# purvasm

./: .gitignore  CLAUDE.md  README.md  flake.nix  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  spago.yaml
benchmarks/: paired-ab.sh  (+2 more)
boot/: .gitignore  .ocamlformat  dune-project  purvasm.opam
boot/bench/: README.md  bench.ml  dune
boot/bench/fixtures/Bench.List/: corefn.json
boot/bench/fixtures/BinTree/: corefn.json
boot/bench/fixtures/Data.HeytingAlgebra/: corefn.json
boot/bench/fixtures/Data.Ordering/: corefn.json
boot/bench/fixtures/Data.Semigroup/: corefn.json
boot/bench/fixtures/Data.Symbol/: corefn.json
boot/bench/fixtures/Fib/: corefn.json
boot/bench/fixtures/MapFold/: corefn.json
boot/bench/fixtures/NQueens/: corefn.json
boot/bench/fixtures/Quicksort/: corefn.json
boot/bench/src/: BinTree.purs  Fib.purs  MapFold.purs  NQueens.purs  Quicksort.purs
boot/bench/src/Bench/: List.purs
boot/lib/cesk/: addr.ml  addr.mli  ast.ml  cont.ml  dune  env.ml  errors.ml  machine.ml  pmatch.ml  prim.ml  store.ml  value.ml
boot/lib/corefn/: ann.ml  decode.ml  dune  expr.ml  literal.ml  module.ml  names.ml
boot/lib/ffi/: dune  ffi.ml
boot/lib/link/: dune  link.ml
boot/lib/llvm_backend/: codegen_llvm.ml  dune
boot/lib/lower/: dune  lower.ml
boot/lib/middle_end/: anf.ml  dune  match_compile.ml  transl.ml
boot/lib/middle_end/passes/: dbe.ml  dict_elim.ml  effect_analysis.ml  simplify.ml
boot/lib/native_link/: dune  native_bundle.ml  native_link.ml
boot/lib/ocaml_backend/: codegen_ml.ml  dune
boot/lib/pvm/: artifact.ml  compile.ml  dune  image.ml  plink.ml
boot/lib/vm/: bytecode.ml  codegen.ml  dune  foreign.ml  machine.ml  match_compile.ml  value.ml  vm.ml
boot/test/e2e/: dune  test_e2e.ml
boot/test/fixtures/: fixture.corefn.json
boot/test/fixtures/app/Lib/: corefn.json
boot/test/unit/: dune  test_anf.ml  test_corefn.ml  test_effect_analysis.ml  test_ffi.ml  test_lower.ml  test_machine.ml  test_native_link.ml
boot/test/unit/fixtures/: fixture.corefn.json
crates/purvasm-foreign/: Cargo.toml
crates/purvasm-foreign/src/: __rt.rs  convert.rs  ctx.rs  lib.rs
crates/purvasm-foreign/tests/: leaves.rs
examples/rust-ffi/foreign/: Cargo.toml
examples/rust-ffi/foreign/src/: lib.rs
runtime/: Cargo.toml  README.md
runtime/include/: purvasm.h
runtime/src/: abi.rs  apply.rs  byneed.rs  effect.rs  gc.rs  heap.rs  heap_words.rs  leaf.rs  lib.rs  prim.rs  record.rs  stats.rs  word.rs
(+615 files in other folders)
