[package]
name = "purvasm-rt"
version = "0.0.0"
edition = "2021"
description = "purvasm v1 native runtime (ADR-0063/0064): the owned allocator, GC, and value ABI"
publish = false

[lib]
# ADR-0071 §1: `staticlib` exposes the `extern "C"` surface (`src/abi.rs`) linked into the LLVM-codegen
# output; `lib` (rlib) keeps the Rust-unit-test + Miri surface. Same code, two front doors.
crate-type = ["staticlib", "lib"]

[profile.release]
# The runtime is unsafe-heavy; keep overflow checks on until the differential is trusted.
overflow-checks = true
